--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:ts": "tsc && ts-add-js-extension --dir=lib",
     "prettier": "npx prettier . --write",
     "type:check": "npx tsc --noEmit --skipLibCheck",
+    "publish": "npm run build && npm publish",
     "serve": "webpack serve --mode development"
   },
   "repository": {
